PythonProjects/ph_fenics/kirchhoff_ph/jitfailure-dolfin_expression_9e29379831bdb26a75ee9613ac080e48/error.log
/tmp/tmpuozjohz6/dolfin_expression_9e29379831bdb26a75ee9613ac080e48.cpp: In member function 'virtual void dolfin::dolfin_expression_9e29379831bdb26a75ee9613ac080e48::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const':
/tmp/tmpuozjohz6/dolfin_expression_9e29379831bdb26a75ee9613ac080e48.cpp:65:66: error: 'D' was not declared in this scope
           values[0] = sin(pi*x[0]/a)*sin(pi*x[1]/b)*sin(beta*t)*(D*pow( pow(pi/a, 2) + pow(pi/b, 2) , 2) - pow(beta,2));
                                                                  ^
/tmp/tmpuozjohz6/dolfin_expression_9e29379831bdb26a75ee9613ac080e48.cpp: In member function 'virtual double dolfin::dolfin_expression_9e29379831bdb26a75ee9613ac080e48::get_property(std::__cxx11::string) const':
/tmp/tmpuozjohz6/dolfin_expression_9e29379831bdb26a75ee9613ac080e48.cpp:77:11: warning: this 'if' clause does not guard... [-Wmisleading-indentation]
           if (name == "beta") return beta;          if (name == "a") return a;          if (name == "b") return b;          if (name == "t") return t;
           ^~
/tmp/tmpuozjohz6/dolfin_expression_9e29379831bdb26a75ee9613ac080e48.cpp:77:53: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the 'if'
           if (name == "beta") return beta;          if (name == "a") return a;          if (name == "b") return b;          if (name == "t") return t;
                                                     ^~
